[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menu_options/menu_options.gd" type="Script" id=1]

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 351.0
margin_right = 448.0
margin_bottom = 600.0
custom_constants/separation = 25
alignment = 1

[node name="volume_master_label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 97.0
margin_bottom = 184.0
text = "Master Volume"

[node name="volume_master_slider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 97.0
margin_bottom = 225.0
max_value = 1.0
step = 0.01

[node name="volume_music_label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 97.0
margin_bottom = 264.0
text = "Music Volume"

[node name="volume_music_slider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 289.0
margin_right = 97.0
margin_bottom = 305.0
max_value = 1.0
step = 0.01

[node name="volume_sound_label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 97.0
margin_bottom = 344.0
text = "Sound Volume"

[node name="volume_sound_slider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 97.0
margin_bottom = 385.0
max_value = 1.0
step = 0.01

[node name="exit_menu" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 97.0
margin_bottom = 430.0
text = "Exit Menu"

[connection signal="value_changed" from="HBoxContainer/VBoxContainer/volume_master_slider" to="." method="_on_volume_master_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/volume_music_slider" to="." method="_on_volume_music_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/volume_sound_slider" to="." method="_on_volume_sound_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/exit_menu" to="." method="_on_exit_menu_pressed"]
